[metadata]
name = ce2
version = 0.1.0
description = The Cost Explorer Explorer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirosen/ce2
author = Stephen Rosen
author_email = sirosen@uchicago.edu

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.2
install_requires =
    boto3
py_modules = ce2

[options.entry_points]
console_scripts =
    ce2 = ce2:main

[bdist_wheel]
universal = True


[isort]
profile = black
